--- a/alamofire-sample/Config/KMConfig.plist
+++ b/alamofire-sample/Config/KMConfig.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>upload_image</key>
-	<string>https://pwcdo.gits.app/upload/upload</string>
+	<string></string>
 	<key>get_image</key>
-	<string>https://pwcdo.gits.app/upload/images/</string>
+	<string></string>
 </dict>
 </plist>
